Fixed page scrolling on focus

--- a/demo.html
+++ b/demo.html
@@ -108,8 +108,8 @@
     <style type="text/css" media="screen">
       /* First console */
       div.console1 { font-size: 14px }
-      div.console1 div.jquery-console-inner 
-       { width:900px; height:200px; background:#333; padding:0.5em;
+      div.console1 div.jquery-console-inner
+       { position: relative; width:900px; height:200px; background:#333; padding:0.5em;
          overflow:auto }
       div.console1 div.jquery-console-prompt-box
        { color:#fff; font-family:monospace; }
@@ -127,8 +127,8 @@
       div.console1 span.jquery-console-prompt-label { font-weight:bold }
       /* Second console */
       div.console2 { font-size: 14px; margin-top:1em }
-      div.console2 div.jquery-console-inner 
-       { width:900px; height:200px; background:#efefef; padding:0.5em;
+      div.console2 div.jquery-console-inner
+       { position: relative; width:900px; height:200px; background:#efefef; padding:0.5em;
          overflow:auto }
       div.console2 div.jquery-console-prompt-box
        { color:#444; font-family:monospace; }
@@ -143,8 +143,8 @@
       div.console2 span.jquery-console-prompt-label { font-weight:bold }
       /* Third console */
       div.console3 { font-size: 14px; margin-top:1em }
-      div.console3 div.jquery-console-inner 
-       { width:900px; height:200px; background:#efefef; padding:0.5em;
+      div.console3 div.jquery-console-inner
+       { position: relative; width:900px; height:200px; background:#efefef; padding:0.5em;
          overflow:auto }
       div.console3 div.jquery-console-prompt-box
        { color:#444; font-family:monospace; }
@@ -160,8 +160,8 @@
       font-weight:bold }
       /* Fourth console */
       div.console4 { font-size: 14px; margin-top:1em }
-      div.console4 div.jquery-console-inner 
-       { width:900px; height:200px; background:#efefef; padding:0.5em;
+      div.console4 div.jquery-console-inner
+       { position: relative; width:900px; height:200px; background:#efefef; padding:0.5em;
          overflow:auto }
       div.console4 div.jquery-console-prompt-box
        { color:#444; font-family:monospace; }
